# app.thewcag.com

./: .dockerignore  .gitignore  CHANGELOG.md  DESIGN.md  PLAN.md  PRODUCT.md  README.md  SKILL.md  docker-compose.yaml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: quality.yml  release.yml
apps/desktop/: .env.example  electron-builder.yml  electron.vite.config.ts  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/electron/: ipc.ts  main.ts  menu.ts  migration.ts  native-host-registration.test.ts  native-host-registration.ts  native-host.ts  preload.ts  security.test.ts  security.ts  windows.test.ts  windows.ts
apps/desktop/resources/: after-pack.mjs  entitlements.mac.plist  icon.icns
apps/desktop/src/: App.tsx  env.d.ts  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: actions.rs  auth.rs  capture.rs  export.rs  lens.rs  lib.rs  library.rs  main.rs  overlay.rs  permissions.rs  settings.rs  shortcuts.rs  state.rs  store.rs  toolwin.rs  tray.rs  update.rs
apps/extension/: manifest.json  package.json  popup.html  sidepanel.html  tsconfig.json  vite.config.ts
apps/extension/src/: evidence.test.ts  evidence.ts  manifest.test.ts  native.test.ts  native.ts  page-access.test.ts  page-access.ts  picker.test.ts  picker.ts  service-worker.test.ts  service-worker.ts
apps/web/: .env.example  Dockerfile  README.md  auth.ts  docker-compose.dev.yml  instrumentation.test.ts  instrumentation.ts  middleware.test.ts  middleware.ts  next.config.mjs  package.json  playwright.a11y.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/a11y/: axe-allowlist.json  triage.test.ts  triage.ts
apps/web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.test.ts  sitemap.ts
apps/web/components/: AccountMenu.tsx  AdminConfirmButton.tsx  AppPageLoading.tsx  BillingReturnStatus.tsx  BrandForm.tsx  BrandPreview.tsx  CopyLinkButton.tsx  DeleteButton.tsx  Footer.tsx  GuideTelemetry.tsx  Header.tsx  HeaderAccount.test.ts  HeaderAccount.tsx  HeaderNav.tsx  HomeExperience.tsx  Icon.tsx  PricingCheckoutButton.tsx  ProductLinks.tsx  ReportViewTracker.tsx  SiteMenu.tsx  header-actions.ts  icons.tsx
apps/web/drizzle/: 0000_init.sql  0001_ai_generation.sql  0002_device_expiry.sql  0003_brand_and_report_size.sql  0003_finding_identity.sql  0004_dodo_billing.sql  0005_funnel_telemetry.sql  0007_device_claim.sql  0008_legacy_report_finding_ids.sql  (+3 more)
docs/: AI-EXTENSION-IMPLEMENTATION.md  AUDITOR-PRODUCT-ROADMAP.md  AUTOMATED-ACCESSIBILITY-SIGNALS.md  BILLING-OPERATIONS.md  FUNNEL-TELEMETRY.md  RELEASING.md  SAAS-DODO-PAYMENTS-PLAN.md  SCK-MIGRATION.md  SITE-INTEGRATION.md  UX-AUDIT-2026-07.md
scripts/: desktop-packaging.test.mjs  desktop-runtime-smoke.mjs  electron-release-lib.mjs  electron-release.test.mjs  generate-desktop-icons.mjs  make-icon.mjs  make-latest-json.mjs  make-tray-from-brand.mjs  merge-latest-json.mjs  release-manifest-lib.mjs  release-manifest.test.mjs  validate-desktop-bundle.mjs  validate-electron-release.mjs  validate-release-version.mjs  web-navigation.test.mjs  windows-native-host-smoke.mjs
(+259 files in other folders)
