[package]
name = "accessibility-build-desktop"
version = "0.1.0"
description = "Instant accessibility checks, anywhere on screen"
edition = "2021"

[lib]
name = "accessibility_build_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
mouse_position = "0.1"
chrono = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
