[package]
name = "accessibility-build-desktop"
version = "2.4.0"
description = "Instant accessibility checks, anywhere on screen"
edition = "2021"

[lib]
name = "accessibility_build_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
image = "0.25"
mouse_position = "0.1"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
whoami = "1"
url = "2"

# keyring backend is per-OS: Keychain on macOS, Credential Manager on Windows.
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
objc2 = "0.6"
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
# SetWindowDisplayAffinity(WDA_EXCLUDEFROMCAPTURE) keeps the live lens window
# out of its own screen capture (no hide/show flicker).
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
